Allowd-Pod-For-LatestTag-Validation.yml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: app
    image: nginx:1.21.6
