Deny-Pod-For-LatestTag-Validation.yml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
  - name: app
    image: nginx:latest
